fixed layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,13 +32,3 @@ header#navbar-header{
     height: 4rem;
 
 }
-
-[color=primary]{
-  color: #673ab7;
-}
-
-
-strong{
-  font-style: italic;
-  text-decoration: underline;
-}
